# test

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
04_EuCu/Minority_Cinema/: Xin | Assignment Paper Discussion 1.docx
src/: main.cpp
